building shopping cart

--- a/Store Folder/styles.css
+++ b/Store Folder/styles.css
@@ -1,4 +1,12 @@
 img {
     width:  200px;
-    height: 200px;
+    height: 200px; 
+}
+
+* {
+    background-color: pink;
+}
+
+button{
+   background-color: #DA057E; 
 }
