--- a/Store Folder/styles.css
+++ b/Store Folder/styles.css
@@ -70,7 +70,7 @@
     font-size: 5em;
     opacity: 1;
     background-color: transparent;
-    color: rgb(240, 180, 220);
+    color: #f1cde5;
     text-shadow: 0 0 3px purple, 0 0 2px white;    
 }
 /*BAND NAME END*/
@@ -219,12 +219,18 @@
 }
 .cart_price{
     width: 35%;
-    font-size: 1em; 
+    font-size: 1em;
+  
+}
+
+.cart_items{
+    font-family: 'Encode Sans SC', sans-serif;
 }
 
 .cart_quantity{
     width: 35%;
     font-size: 1em; 
+ 
 }
 .cart_item_title{
     font-weight: bold;
@@ -249,6 +255,8 @@
     padding: 0;
     text-align: 1.2em;
     margin-right: 25px;
+    font-size: 1em;   
+    font-family: 'Encode Sans SC', sans-serif;
 }
 .cart_row:last-child {
     border-bottom: 1px solid;
